--- a/stylepagetaxi.css
+++ b/stylepagetaxi.css
@@ -51,7 +51,7 @@ form input {
 
 form input {
  display: block;
- width: 50%;
+ width: 180px;
  padding: 12px;
  margin-bottom: 20px;
  border: 1px solid #ccc;
